[tool.poetry]
name = "fastlane-bot"
version = "3.2.2"
description = "Carbon Arbitrage Bot, an open-source arbitrage protocol, allows any user to perform arbitrage between Bancor ecosystem protocols and external exchanges and redirect arbitrage profits back to the protocol."
authors = ["Bancor Network <services@bancor.network>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastlane_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.9.6"
packaging = "21.3"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
typing-extensions = "^4.7.1"
python-dotenv = "^0.16.0"
joblib = "^1.2.0"
pandas = "^1.5.2"
alchemy-sdk = "^0.1.1"
pyarrow = "^11.0.0"
networkx = "^3.0"
matplotlib = "^3.7.1"
dataclass_wizard = "^0.22.2"
hexbytes = "^0.3.1"
setuptools = "^67.6.1"
protobuf = "^4.24.4"
tqdm = "^4.64.1"
web3 = "^6.16.0"
nest-asyncio = "^1.5.8"
arb-optimizer = {path = "arb-optimizer"}


[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.10.0"
imgkit = "^1.2.3"
jupytext = "^1.16.1"
cvxpy = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
